@@ -1,5 +1,10 @@
 2008-10-30  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/NewCSharpExpressionFinder.cs:
+	* Gui/CSharpTextEditorCompletion.cs: worked on "new" completion.
+
+2008-10-30  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/NRefactoryResolver.cs:
 	* Gui/NewCSharpExpressionFinder.cs: Worked on "new" completion.
 
